banner example, added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./src/assets/LOGOTIPO _BLUE.png">
             <i id="menuIcon" class="fa-solid fa-bars"></i>
             <!-- <i class="fa-solid fa-xmark"></i> class="hidden"-->
-            <nav id="menuNav">
+            <nav id="menuNav" class="hidden">
                 <ul>
                     <li><a href="">Nosotros</a></li>
                     <li class="treamentsMenu">
@@ -68,7 +68,14 @@
                 </ul>
             </nav>
         </div>
-        <div class="banner"></div>
+        <div class="banner">
+            <img class="waveTop" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
+            <div class="coverImg">
+                <div><h1>Más de lo que esperabas</h1></div>
+            </div>
+            <img class="waveBotton" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
+        </div>
+
     </header>
     <main>
         <section class="about">
