banner background test

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="banner">
             <img class="waveTop" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
             <div class="coverImg">
-                <div><h1>Más de lo que esperabas</h1></div>
+                <div><h1>Más de lo que esperas</h1></div>
             </div>
             <img class="waveBotton" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
         </div>
