about us section structure and content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <script type="module" defer src="./src/index.js"></script>
     <script src="https://kit.fontawesome.com/d69f8c2d2d.js" crossorigin="anonymous"></script>
     <title>Anantara BodySpa</title>
@@ -71,7 +74,7 @@
         <div class="banner">
             <img class="waveTop" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
             <div class="coverImg">
-                <div><h1>Más de lo que esperas</h1></div>
+                <div><h1>Más de lo que espera</h1></div>
             </div>
             <img class="waveBotton" src="./src/assets/img-shared/img2.svg" alt="wave-decoration">
         </div>
@@ -79,12 +82,43 @@
     </header>
     <main>
         <section class="about">
-            <h2>¿Quíenes somos?</h2>
-
-
+            <h2>¿QUIENES SOMOS?</h2>
+            <h3>En Anantara Body Spa nos especializamos en el
+                moldeado de la figura corporal, diseñado y personalizando
+                nuestros tratamientos corporalesesteticos de acuerdo a las 
+                necesidades de cada uno de nuestros clientes, siempre con 
+                tecnología de vanguardia.
+            </h3>
+            <div class="adjectives">
+                <article>
+                    <i class="fa-solid fa-ranking-star"></i>
+                    <h4>EXPERIENCIA</h4>
+                    <p>Contamos con más de 10 años de experiencia en tratamientos de alta calidad.
+                    </p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-trophy"></i>
+                    <h4>RESULTADOS</h4>
+                    <p>Nuestros resultados y clientes satisfechos nos avalan.
+                    </p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-hand-sparkles"></i>
+                    <h4>VANGUARDIA</h4>
+                    <p>Tratamientos con técnicas modernas y aparatos de ultima tecnologia.
+                    </p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-check"></i>
+                    <h4>ARMONIA CORPORAL</h4>
+                    <p>Te brindamos armonia estetica y equilibrio en el contorno corporal mediante
+                        tratamientos personalizados.
+                    </p>
+                </article>
+            </div>
         </section>
         <section class="services">
-            <h2>Nuestros Servicios</h2>
+            <h2>NUESTROS TRATAMIENTOS</h2>
             <div class="categories">
                 <article>
                     <img>
