about us update css

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2>¿QUIENES SOMOS?</h2>
             <h3>En Anantara Body Spa nos especializamos en el
                 moldeado de la figura corporal, diseñado y personalizando
-                nuestros tratamientos corporalesesteticos de acuerdo a las 
+                nuestros tratamientos corporales esteticos de acuerdo a las 
                 necesidades de cada uno de nuestros clientes, siempre con 
                 tecnología de vanguardia.
             </h3>
@@ -111,10 +111,15 @@
                 <article>
                     <i class="fa-solid fa-check"></i>
                     <h4>ARMONIA CORPORAL</h4>
-                    <p>Te brindamos armonia estetica y equilibrio en el contorno corporal mediante
+                    <p>Armonia estetica y equilibrio en el contorno corporal mediante
                         tratamientos personalizados.
                     </p>
                 </article>
+            </div>
+            <div class="ourMission">
+                <h2>MISION</h2>
+                <p>Día a día nos esforzamos en brindarte el mejor servicio con las mejores técnicas
+                    productos y aparatologia, buscamos tu satisfaccion a través de grandes resultados.  </p>
             </div>
         </section>
         <section class="services">
