trreatments section added

--- a/index.html
+++ b/index.html
@@ -116,35 +116,50 @@
                     </p>
                 </article>
             </div>
-            <div class="ourMission">
-                <h2>MISION</h2>
-                <p>Día a día nos esforzamos en brindarte el mejor servicio con las mejores técnicas
-                    productos y aparatologia, buscamos tu satisfaccion a través de grandes resultados.  </p>
+            <div class="mission">
+                <div class="content">
+                    <h2>MISION</h2>
+                    <p>Día a día nos esforzamos en brindarte el mejor servicio con las mejores técnicas
+                    productos y aparatologia, buscamos tu satisfaccion a través de grandes resultados.</p>
+                </div>
+                <!-- <img class="waveDecoration" src="./src/assets/img-shared/img2.svg" alt="wave-decoration"> -->
+
             </div>
+
         </section>
         <section class="services">
             <h2>NUESTROS TRATAMIENTOS</h2>
             <div class="categories">
                 <article>
-                    <img>
-                    <h3>Faciales</h3>
-                    <p></p>
-                    <a href="./servicios/faciale.html">faciales ver mas</a>
+                    <div class="imgConteiner">
+                        <img src="./src/assets/img-shared/facial-test.jpg">
+                    </div>
+                    <div class="content">
+                        <h3>Faciales</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus quasi eaque blanditiis nam, libero magnam?</p>
+                        <a href="./servicios/faciale.html">ver mas</a>
+                    </div>
                 </article>
                 <article>
-                    <img>
-                    <h3>Tratamientos Corporales</h3>
-                    <p></p>
-                    <a href="./servicios/tratamientos_corporales.html"></a>
+                    <div class="imgConteiner">
+                        <img src="./src/assets/img-shared/facial-test.jpg">
+                    </div>
+                    <div class="content">
+                        <h3>Tratamientos Corporales</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod obcaecati similique a reiciendis!</p>
+                        <a href="./servicios/tratamientos_corporales.html">ver mas</a>
+                    </div>
                 </article>
                 <article>
-                    <img>
-                    <h3>Tratamiento Regenerante</h3>
-                    <p></p>
-                    <a href="./servicios/tratamiento_regenerante.html"></a>
+                    <div class="imgConteiner">
+                        <img src="./src/assets/img-shared/facial-test.jpg">
+                    </div>
+                    <div class="content">
+                        <h3>Tratamiento Regenerante</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa molestias laudantium doloremque facilis!</p>
+                        <a href="./servicios/tratamiento_regenerante.html">ver mas</a>
+                    </div>
                 </article>
-                
-
             </div>
 
         </section>
