--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <script type="module" defer src="./src/index.js"></script>
     <script src="https://kit.fontawesome.com/d69f8c2d2d.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Anantara BodySpa</title>
     
 </head>
@@ -17,7 +19,7 @@
     <header>
         <div class="menu">
             <!-- logo -->
-            <img src="./src/assets/LOGOTIPO _BLUE.png">
+            <img src="./src/assets/LOGOTIPO_BLUE.png">
             <i id="menuIcon" class="fa-solid fa-bars"></i>
             <!-- <i class="fa-solid fa-xmark"></i> class="hidden"-->
             <nav id="menuNav" class="hidden">
@@ -163,12 +165,69 @@
             </div>
 
         </section>
-        <section class="contact">
-            <h2>Contactanos</h2>
-
+        <section class="ourCustomers">
+            <h2>Nuestros clientes opinan</h2>
+            <!-- carousel commnets -->
+            <div id="carouselExampleFade" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <!-- <i class="fas fa-quote-left"></i> -->
+                        <p>Súper recomendado, notas cambios desde la tercera sesión.
+                        Junto con la alimentación y actividad física, los resultados son increíbles.</p>
+                        <span> -Ivette Tamayo</span>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <i class="fas fa-quote-left"></i> -->
+                        <p>Excelente servicio, me están haciendo micropuntura en estrías y
+                        desde la primera sesión e notado cambios, aparte que  la atención al cliente es muy buena y agradable.</p>
+                        <span> -Natalia Fernandez</span>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <i class="fas fa-quote-left icon"></i> -->
+                        <p>Me encanto! exelentes servisios aparte brindan confianza y seguridad, desde el inicio
+                        te explican muy bien todo el proceso y son muy cinceros en los resultados que puedes obtener,
+                        estoy feliz con los resultados que he tenido.</p>
+                        <span> -Jesi Espinoza</span>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <i class="fas fa-quote-left"></i> -->
+                        <p>Excelente servicio, es increíble cómo a partir de la tercera sesión comienzas a notar cambios.</p>
+                        <span> -Marychuy Quijada</span>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <i class="fas fa-quote-left"></i> -->
+                        <p>Excelente servicio, terapeutas profesionales, desde la cita de valoración te trasmiten
+                        y te dan seguridad que verás resultados a corto plazo recomiendo ampliamente, de lo mejor.</p>
+                        <span> -Letty Cisneros</span>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+            </div>
         </section>
-
     </main>
-    <fotter></fotter>
+    <footer>
+        <div class="isotipo">
+            <img src="./src/assets/ISOTIPO.png" alt="isotipo">
+        </div>
+        <div class="info">
+            <i class="fa-brands fa-facebook"></i>
+            <!-- <i class="fa-brands fa-facebook-f"></i> -->
+            <i class="fa-brands fa-instagram"></i>
+            <ul>
+                <li>Av.Lapislázuli #2529 Local 6 #44580 Guadalajara, Jalisco.</li>
+                <li>Lunes-Viernes: 9am - 6pm <br>Sabados: 9am - 3pm</li>
+                <li>Tel: 33 2615 4992</li>
+                <li>anantara.bodyspa@gmail.com</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
+                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.694011695647!2d-103.39307258548403!3d20.64132548620957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428adfb344353e7%3A0x262cdb0de400283f!2sANANTARA%20BODY%20SPA!5e0!3m2!1ses-419!2smx!4v1641656002486!5m2!1ses-419!2smx"></iframe> -->
